--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ idna==2.10
 lxml==4.6.3
 multitasking==0.0.9
 numpy==1.20.2
-
+jupyter-dash==0.4.0
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
@@ -21,3 +21,4 @@ plotly~=5.1.0
 cufflinks~=0.17.3
 boto3~=1.17.98
 mplfinance~=0.12.7a17
+yahoo-fin~=0.8.9
