--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\joeyk\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0
-include-system-site-packages = false
-version = 3.9.4
+home = C:\Users\Windows\AppData\Local\Programs\Python\Python39
+include-system-site-packages = true
+version = 3.9.6
