--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,16 @@ six==1.15.0
 tqdm==4.60.0
 urllib3==1.26.4
 yfinance==0.1.59
-secedgar~=0.3.3
-pandas~=1.2.4
-matplotlib~=3.4.2
-FinNews~=1.1.0
-dash~=1.20.0
-plotly~=5.1.0
-cufflinks~=0.17.3
-boto3~=1.17.98
-mplfinance~=0.12.7a17
-tensorflow~=2.5.0
-yahoo-fin~=0.8.9
+pandas==1.2.4
+matplotlib==3.4.2
+FinNews==1.1.0
+dash==1.20.0
+plotly==5.1.0
+cufflinks==0.17.3
+boto3==1.17.98
+mplfinance==0.12.7a17
+tensorflow==2.5.0
+yahoo-fin==0.8.9
 prophet==1.0.1
 scikit-learn == 0.24.2
 
