--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ prophet==1.0.1
 scikit-learn == 0.24.2
 tqdm==4.61.1
 pandas-market-calendars==2.0
+SQLAlchemy==1.4.22
+psycopg2==2.9.1
+statsmodels==0.12.2
