--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ dash-bootstrap-components==0.13.0
 SQLAlchemy==1.4.22
 psycopg2==2.9.1
 statsmodels==0.12.2
+seaborn==0.11.2
+keras-tuner==1.0.3
+kaleido==0.2.1
